--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -25,3 +25,13 @@ repos:
         - "pytest"
       args: [ "--exclude" ,"migrations", . ]
       pass_filenames: false
+
+- repo: https://github.com/gitleaks/gitleaks
+  rev: v8.18.0  # Use the latest stable version
+  hooks:
+    - id: gitleaks
+      name: gitleaks
+      entry: gitleaks detect --redact
+      language: system
+      pass_filenames: false
+      stages: [pre-commit]
